Fixing upload button spacing and removing dropzone dependency

--- a/osi_prototype/static/css/profile.css
+++ b/osi_prototype/static/css/profile.css
@@ -31,6 +31,7 @@
 .user-photo {
   width: 70px;
   height: 70px;
+  margin-bottom: 10px;
 }
 
 #real-file-upload {
